DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/fields/amc__Amount__c.field-meta.xml
<CustomField>
    <fullName>amc__Amount__c</fullName>
    <inlineHelpText>Identifies the value of the payment</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>