DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/fields/amc__Billing_Event__c.field-meta.xml
<CustomField>
    <fullName>amc__Billing_Event__c</fullName>
    <inlineHelpText>Links to the parent Billing Event this payment relates to</inlineHelpText>
    <label>Billing Event</label>
    <referenceTo>amc__Billing_Event__c</referenceTo>
    <relationshipLabel>Billing Payments</relationshipLabel>
    <relationshipName>Billing_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>