DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/fields/amc__Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>amc__Date_Paid__c</fullName>
    <inlineHelpText>Identifies the date the payment was made</inlineHelpText>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>