DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/fields/amc__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>amc__Payment_Method__c</fullName>
    <description>Identifies how the payment was made.</description>
    <inlineHelpText>Identifies how the payment was made.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>