DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/fields/amc__Reference__c.field-meta.xml
<CustomField>
    <fullName>amc__Reference__c</fullName>
    <inlineHelpText>Identifies the reference number for this payment</inlineHelpText>
    <label>Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>