DigicielFull/force-app/main/default/objects/amc__Billing_Payment__c/listViews/amc__All.listView-meta.xml
<ListView>
    <fullName>amc__All</fullName>
    <columns>NAME</columns>
    <columns>amc__Billing_Event__c</columns>
    <columns>amc__Date_Paid__c</columns>
    <columns>amc__Amount__c</columns>
    <columns>amc__Payment_Method__c</columns>
    <columns>amc__Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>